--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <li>🏆 ICPC Dhaka Regional Contest – 2022</li>
             <li>🏆 ICPC Dhaka Regional Contest – 2023</li>
             <li>🏆 ICPC Dhaka Regional Contest – 2024</li>
-            <li>⭐ Codeforces Rank: Pupil</li>
-            <li>💡 Solved many problems on LeetCode</li>
+            <li>⭐ Codeforces Rank: Pupil (Max Rating: 1222)</li>
+            <li>💡 Solved 700+ problems on different online judges</li>
         </ul>
     </section>
 
@@ -43,7 +43,18 @@
         <div class="links">
             <a href="https://codeforces.com/profile/Ujjwal_Ojha" target="_blank">Codeforces</a>
             <a href="https://leetcode.com/ujjwal151" target="_blank">LeetCode</a>
-            <a href="https://github.com/Ujjwal151" target="_blank">GitHub</a>
+            <a href="https://toph.co/u/ujjwalojha151" target="_blank">Toph</a>
+        </div>
+    </section>
+
+    <!-- Projects -->
+    <section class="projects">
+        <h2>Projects</h2>
+        <div class="project-links">
+            <a href="https://ujjwal151.github.io/Bangladesh-2.0/" target="_blank">Bangladesh-2.0</a> <br>
+            <a href="https://ujjwal151.github.io/g3-architects-website" target="_blank">g3-architects-website</a> <br>
+            <a href="https://ujjwal151.github.io/Kids-School" target="_blank">Kids-School</a>
+            <a href="https://ujjwal151.github.io/Pet-Shop" target="_blank">Pet-Shop</a>
         </div>
     </section>
 
@@ -58,7 +69,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>© 2026 Your Name | Competitive Programmer</p>
+        <p>© 2026 Ujjwal Ojha | Competitive Programmer</p>
     </footer>
 
 </body>
