--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     <!-- Projects -->
     <section class="projects">
         <h2>Projects</h2>
-        <div class="project-links">
-            <a href="https://ujjwal151.github.io/Pet-Shop" target="_blank">Pet-Shop</a> <br>
-            <a href="https://ujjwal151.github.io/Kids-School" target="_blank">Kids-School</a> <br>
-            <a href="https://ujjwal151.github.io/g3-architects-website" target="_blank">g3-architects-website</a> <br>
+        <div class="links" id="project-links">
+            <a href="https://ujjwal151.github.io/Pet-Shop" target="_blank">Pet-Shop</a>
+            <a href="https://ujjwal151.github.io/Kids-School" target="_blank">Kids-School</a> 
+            <a href="https://ujjwal151.github.io/g3-architects-website" target="_blank">g3-architects-website</a> 
             <a href="https://ujjwal151.github.io/Bangladesh-2.0/" target="_blank">Bangladesh-2.0</a>
         </div>
     </section>
