--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <li>🏆 ICPC Dhaka Regional Contest – 2022</li>
             <li>🏆 ICPC Dhaka Regional Contest – 2023</li>
             <li>🏆 ICPC Dhaka Regional Contest – 2024</li>
-            <li>⭐ Codeforces Rank: Pupil (Max Rating: 1222)</li>
-            <li>💡 Solved 700+ problems on different online judges</li>
+            <li>⭐ Codeforces Rank: <span style="color: green;"><b>Pupil</b></span> (Max Rating: <b>1222</b>)</li>
+            <li>💡 Solved <b>700+</b> problems on different online judges</li>
         </ul>
     </section>
 
